Removed fixed attachment to rectify collapsing bg-img

--- a/_sass/_home.sass
+++ b/_sass/_home.sass
@@ -407,9 +407,9 @@ section#projects
 
 @media only screen and (min-width: 768px) and (min-height: 450px)
   header
-    .bg-img
-      background:
-        attachment: fixed
+    // .bg-img
+    //   background:
+    //     attachment: fixed
 
     #main-title.container
       h1
